src/formula_force/main/default/objects/Contestant__c/Contestant__c.object-meta.xml
<CustomObject>
    <label>Contestant</label>
    <nameField>
        <displayFormat>CONTEST-{00000000}</displayFormat>
        <label>Contestant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contestants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>