src/formula_force/main/default/objects/Contestant__c/fields/ChampionshipPoints__c.field-meta.xml
<CustomField>
    <fullName>ChampionshipPoints__c</fullName>
    <label>Championship Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>