src/formula_force/main/default/objects/Contestant__c/fields/DNF__c.field-meta.xml
<CustomField>
    <fullName>DNF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did Not Finish</inlineHelpText>
    <label>DNF</label>
    <type>Checkbox</type>
</CustomField>