src/formula_force/main/default/objects/Contestant__c/fields/DriverandRace__c.field-meta.xml
<CustomField>
    <fullName>DriverandRace__c</fullName>
    <formula>Driver__r.Name +&apos; &apos; +  Race__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver and Race</label>
    <type>Text</type>
</CustomField>