src/formula_force/main/default/objects/Contestant__c/fields/Qualification_Lap_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Lap_Time_2__c</fullName>
    <label>Qualification Lap Time 2</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>