src/formula_force/main/default/objects/Contestant__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <referenceTo>Race__c</referenceTo>
    <relationshipLabel>Contestants</relationshipLabel>
    <relationshipName>Contestants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>