src/formula_force/main/default/objects/Contestant__c/fields/RacePosition__c.field-meta.xml
<CustomField>
    <fullName>RacePosition__c</fullName>
    <label>Race Position</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>